# Universidad

./: .gitignore
.tmp.driveupload/: 10003  10007  10009  10015  10019  10021  10023  10025  10027  10031  10035  10037  10039  10043  10045  10047  10049  10051  10053  10057  10061  10063  10065  10067  10071  10073  10077  10081  10083  10085  10089  10093  10095  10097  10099  10103  10107  10109  10113  10115  (+3014 more)
Arquitectura_de_Computadoras/WinMIPS64/Practica 2/: ejer1,a,b,c,d.txt  ejer1E.s  ejer2.txt
Arquitectura_de_Computadoras/WinMIPS64/Sim-WinMips64/: winmips64.las
Fundamentos_de_Organizacion_de_Datos/: db  dbfermin  ejer1.pas  ejer2.pas  sindni.txt
Fundamentos_de_Organizacion_de_Datos/practica1/: dbempleados  ejer2.pas  ejer3.pas
Rust/Resolucion/prac1/: Cargo.toml
Rust/Resolucion/prac1/src/ejer11/: main.rs
Rust/Resolucion/prac1/src/ejer12/: main.rs
Rust/Resolucion/prac1/src/ejer3/: main.rs
Rust/Resolucion/prac1/src/ejer6/: main.rs
Rust/Resolucion/prac3/: Cargo.toml
Rust/Resolucion/prac3/src/ejer10/: main.rs
Rust/Resolucion/prac3/src/ejer3/: main.rs
Rust/Resolucion/prac3/src/ejer4/: main.rs
Rust/Resolucion/prac3/src/ejer5/: main.rs
Rust/Resolucion/prac3/src/ejer6/: main.rs  valentino_franco_v1.rs  valentino_franco_v2.rs
Rust/Resolucion/prac3/src/ejer7/: main.rs
Rust/Resolucion/prac3/src/ejer8/: main.rs
Rust/Resolucion/prac4/: Cargo.toml  tarpaulin-report.html
Rust/Resolucion/prac4/src/ejer1/: main.rs
Rust/Resolucion/prac4/src/ejer2/: main.rs
Rust/Resolucion/prac4/src/ejer3/: main.rs
Rust/Resolucion/prac4/src/ejer4/: main.rs
Rust/Resolucion/prac4/src/ejer5/: main.rs
Taller_de_Programacion/IDE/: Geany.lnk  NetBeans IDE 8.2.lnk  UltimaCopilacion
(+397 files in other folders)
